# time-track-cpp

./: .gitignore  CMakeLists.txt
server/: package-lock.json  package.json  server.js
src/: TimeTrackerApp.cpp  TimeTrackerApp.h  main.cpp
